<resources>
    <string name="app_name">ConnectUs</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="service_providers">Service Providers</string>
    <string name="delete">Delete</string>
    <string name="my_products">My Products</string>
    <string name="products">Products</string>
    <string name="products_name">Product Name</string>
    <string name="create_product">Create Product</string>
    <string name="image">Image</string>
    <string name="price">Price</string>
    <string name="location">Location</string>
    <string name="dont_have_account_yet">Don\'t have account yet?</string>
    <string name="phone_number">Phone</string>
    <string name="password">Password</string>
    <string name="please_sign_in">Please sign into your account</string>
    <string name="create_new_account">Create a new account</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_plain">Forgot Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="forgot_password_description">Please enter phone to request a password reset</string>
    <string name="dummy_full_name">Victor Chinyavada</string>
    <string name="home">Home</string>
    <string name="dummy_amount">ZAR 0.00</string>
    <string name="my_balance">My Balance</string>
    <string name="account_profile">Account Profile</string>
    <string name="see_all">See All</string>
    <string name="jane_doe">Jane Doe</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="dummy_email">chinyavadav@gmail.com</string>
    <string name="dummy_phone">+263782135087</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="dummy_date_of_birth">16 May 1997</string>
    <string name="sex">Sex</string>
    <string name="dummy_sex">Female</string>
    <string name="marital_status">Marital Status</string>
    <string name="dummy_marital_status">Single</string>
    <string name="edit_profile_details">Edit Account</string>
    <string name="dummy_otp_title">OTP Title</string>
    <string name="description">Description</string>
    <string name="otp_description">OTP Code will be sent to </string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="star">*</string>
    <string name="new_password">New Password</string>
    <string name="verify_password">Verify Password</string>
    <string name="reset_password_description">Enter new password and verify</string>
    <string name="remembered_password">Remembered Password?</string>
    <string name="request_otp">Request OTP</string>
    <string name="country_of_residence">Country of Residence</string>
    <string name="dummy_country">ZA</string>
    <string name="send_code">Send Code</string>
    <string name="back">Back</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="select_option">Select Option</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="loan_applications">Loan Applications</string>
    <string name="mobile_topup">Mobile Topup</string>
    <string name="notifications">Notifications</string>
    <string name="virtual_credit_cards">Virtual Credit Cards</string>
    <string name="paying">PAYING</string>
    <string name="add_note">Add Note</string>
    <string name="placeholder_amount">0.00</string>
    <string name="check_account">Check Account</string>
    <string name="menu">Menu</string>
    <string name="from">FROM</string>
    <string name="auth_code">Auth Code</string>
    <string name="paymate_code">Paymate Code</string>
    <string name="check_paymate">Check Paymate</string>
    <string name="deposit">Deposit</string>
    <string name="transfer">Transfer</string>
    <string name="withdraw">Withdraw</string>
    <string name="deposit_to">DEPOSIT TO</string>
    <string name="transaction_type">Transaction Type</string>
    <string name="dummy_date_time">2020-05-16 14:00:00</string>
    <string name="recommended_products">Recommended Products</string>
    <string name="settings">Settings</string>
    <string name="more_services">More Services</string>
    <string name="services">Services</string>
    <string name="transaction_ref">Ref: 123432</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="refresh">Refresh</string>
    <string name="close">Close</string>
    <string name="transfer_successful">Transfer Successful</string>
    <string name="dummy_transaction_status_message">Your transfer of ZAR 200.00 to Victor Chinyavada was successful!</string>
    <string name="notification_title">Notification Title</string>
    <string name="delete_notifications">Delete Notifications</string>
    <string name="transact_with_qr_code">Transact with QR Code</string>
    <string name="qr_code">QR code</string>
    <string name="connectus_qr_code">ConnectUs QR Code</string>
    <string name="qr_code_privacy_statement">Your QR Code is private. If you share it with someone, they can scan it with their eMalyami camera to view your contact details.</string>
    <string name="tap_to_scan">Tap to Scan</string>
    <string name="proceed">Proceed</string>
    <string name="id_or_passport_no">ID / Passport No</string>
    <string name="dummy_national_id">XXXXXXXX</string>
    <string name="citizenship">Citizenship</string>
    <string name="address">Address</string>
    <string name="dummy_address">1234 Mandela Street, Soweto</string>
    <string name="dummy_city">Cape Town</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="physical_address">Physical Address</string>
    <string name="proceed_to_next">Proceed to Next</string>
    <string name="siba_savings">Siba Joint Savings</string>
    <string name="group_name">Group Name</string>
    <string name="last_message">+263782135087: deposited ZAR 500.00</string>
    <string name="siba_savings_profiles">Siba Savings Accounts</string>
    <string name="province">Province</string>
    <string name="identification">Identification</string>
    <string name="id_type">ID Type</string>
    <string name="id_number">ID Number</string>
    <string name="upload_documents">Upload Documents</string>
    <string name="lets_upload_documents">Let\'s upload documents</string>
    <string name="upload_documents_description">Upload documents from your phone by scanning them via camera.</string>
    <string name="identification_document">ID Document</string>
    <string name="proof_of_residence">Proof of Residence</string>
    <string name="proof_of_residence_description">You can scan a Utility Bill or Bank Statement for reference</string>
    <string name="identification_description">You can scan National ID, Passport or Driver\'s Licence</string>
    <string name="document_privacy_policy">We follow strict privacy and document security policies. Documents shared by you are only accessed by Sobek employees. All documents are kept secure on our cloud servers.</string>
    <string name="passport_or_national_id">Passport or National ID</string>
    <string name="scan">Scan</string>
    <string name="dummy_mobile_provider">Econet Wireless</string>
    <string name="recharge">Recharge</string>
    <string name="dummy_receiver_gets">Receiver gets ZWL100</string>
    <string name="pay">Pay</string>
    <string name="siba_savings_profiles_description">Siba (Sibambisyano) is a joint savings profile which lets you and your friends, family and or business partners to contribute towards the profile. We charge monthly flat fees on the profile!</string>
    <string name="create_siba_profile">Create Account</string>
    <string name="siba_profile_subject">Account Subject</string>
    <string name="invites">Invites</string>
    <string name="enter_paymate_code">Enter Paymate Code</string>
    <string name="payment">Payment</string>
    <string name="to">TO</string>
    <string name="dummy_paymate_code">XXXXXX</string>
    <string name="invite">Invite</string>
    <string name="join">Join</string>
    <string name="profile_name">Siba Account</string>
    <string name="dummy_created_by">Created By</string>
    <string name="enter_message">Enter Message</string>
    <string name="chat">Chat</string>
    <string name="send">Send</string>
    <string name="message">Message</string>
    <string name="dummy_time">08:00</string>
    <string name="dummy_month_day">Jan 10</string>
    <string name="savings_plans">Savings Plans</string>
    <string name="balance">Balance</string>
    <string name="zero">0</string>
    <string name="members">Members</string>
    <string name="contribution_type">Contribution Type</string>
    <string name="amount">Amount</string>
    <string name="zar">ZAR</string>
    <string name="talk_to_us">Talk to us</string>
    <string name="customer_support">Customer Support</string>
    <string name="faq">FAQ</string>
    <string name="dummy_service_description">Description of the service goes here!</string>
    <string name="service_name">Service Name</string>
    <string name="fine_location_permission_rationale">The fine location permission is needed for core functionality.</string>
    <string name="fine_permission_denied_explanation">Fine location permission was denied but is needed for core functionality.</string>
    <string name="location_permission_approved_explanation">You approved FINE location, carry (and click) on!</string>
    <string name="application">Application</string>
    <string name="become_a_paymate_description">To become an eMalyami Paymate, you need to submit the requirements stated below.</string>
    <string name="selfie_holding_id">Selfie while holding ID/Passport</string>
    <string name="selfie_holding_id_description">Hold your ID/Passport and take clear selfie</string>
    <string name="requirements">Requirements</string>
    <string name="certified_id">Certified ID/Passport</string>
    <string name="certified_id_description">Submit certified ID/Passport</string>
    <string name="business_licence">Business Licence</string>
    <string name="business_licence_description">Submit Trading Licence or Company Registration Papers</string>
    <string name="tax_clearance_description">Tax Clearance Certificate or equivalent</string>
    <string name="tax_clearance">Tax Clearance</string>
    <string name="academic_certificate">Academic Certificate</string>
    <string name="academic_certificate_description">Highest academic qualification certificate or letter of motivation</string>
    <string name="recommendation_letter">3 x Recommendation Letters</string>
    <string name="recommendation_letter_description">Recommendation Letters from Customers</string>
    <string name="trading_location">Trading Location</string>
    <string name="location_description">Pick location from which you will be trading from</string>
    <string name="google_maps_api_key">AIzaSyA0Pp5EzLpfa0k6u783uYVpwiBwSpqxRRY</string>
    <string name="wallet_to_bank">Wallet to Bank</string>
    <string name="placeholder_account_number">Account Number</string>
    <string name="placeholder_choose_bank">Choose Bank</string>
    <string name="save">Save</string>
    <string name="change_phone_number">Change Phone</string>
</resources>