<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/account_box"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_offerings"
            android:icon="@drawable/shopping_cart"
            android:title="@string/menu_my_offerings" />
        <item
            android:id="@+id/nav_new_offering"
            android:icon="@drawable/ic_plus"
            android:title="@string/new_offering" />
        <item
            android:id="@+id/nav_service_providers"
            android:icon="@drawable/people"
            android:title="@string/service_providers" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/menu_logout" />

        <!--        <item-->
        <!--            android:id="@+id/nav_siba_savings"-->
        <!--            android:icon="@drawable/people"-->
        <!--            android:title="@string/siba_savings" />-->
        <!--        <item-->
        <!--            android:id="@+id/nav_notifications"-->
        <!--            android:icon="@drawable/notifications"-->
        <!--            android:title="@string/notifications" />-->

        <!--        <item-->
        <!--            android:id="@+id/nav_faq"-->
        <!--            android:icon="@drawable/question_answer"-->
        <!--            android:title="@string/faq" />-->
        <!--        <item-->
        <!--            android:id="@+id/nav_talk_to_us"-->
        <!--            android:icon="@drawable/support_agent"-->
        <!--            android:title="@string/talk_to_us" />-->

    </group>
</menu>