<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_smoke"
    android:fillViewport="true"
    tools:context=".ui.signin.SignInFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_view_logo"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerInside"
                android:src="@drawable/icon" />

            <TextView
                android:id="@+id/text_view_please_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/please_sign_in"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#6B7280" />

            <TextView
                android:id="@+id/text_view_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_view_change_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/change_phone_number"
                android:textAlignment="viewEnd"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/hyperlink"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_sign_in" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_credentials"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:drawableEnd="@drawable/visibility"
                android:drawableRight="@drawable/visibility"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/button_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/sign_in"
                app:cornerRadius="20dp" />

            <TextView
                android:id="@+id/text_view_otp_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|end"
                android:layout_marginTop="20dp"
                android:text="@string/forgot_password"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/hyperlink" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>